--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "build:watch": "parcel watch",
     "postbuild": "cp dist/index.d.ts dist/index.d.mts",
     "check:config": "attw --pack . && publint",
-    "check:typescript": "tsc --noEmit"
+    "check:typescript": "tsc --noEmit",
+    "test": "bun test"
   },
   "author": "@codemaskinc",
   "license": "MIT",
@@ -38,6 +39,7 @@
     "@parcel/packager-ts": "2.10.3",
     "@parcel/transformer-typescript-types": "2.10.3",
     "@types/react": "18.2.45",
+    "bun-types": "^1.0.18-1",
     "parcel": "2.10.3",
     "publint": "0.2.6",
     "react": "18.2.0",
