--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "declaration": true,
     "declarationMap": true,
     "lib": ["es2022", "dom", "dom.iterable"],
+    "types": ["bun-types"]
   },
   "include": ["src"]
 }
