--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "make-coverage-badge": "1.2.0",
     "parcel": "2.10.3",
     "publint": "0.2.6",
+    "ts-jest": "29.1.1",
     "type-testing": "0.2.0",
     "typescript": "5.3.3"
   },
