--- a/package.json
+++ b/package.json
@@ -22,15 +22,13 @@
   },
   "scripts": {
     "postinstall": "husky install",
-    "precommit": "bun coverage && dprint fmt && git add .",
+    "precommit": "bun test && dprint fmt && git add .",
     "prebuild": "rm -rf dist && rm -rf .parcel-cache",
     "build": "parcel build",
     "build:watch": "parcel watch",
     "postbuild": "cp dist/index.d.ts dist/index.d.mts",
     "check:config": "attw --pack . && publint",
-    "check:typescript": "tsc --noEmit",
-    "test": "jest",
-    "coverage": "jest --coverage && make-coverage-badge --output-path ./badge.svg"
+    "check:typescript": "tsc --noEmit"
   },
   "author": "@codemaskinc",
   "license": "MIT",
@@ -39,21 +37,18 @@
   ],
   "devDependencies": {
     "@arethetypeswrong/cli": "0.13.3",
+    "@happy-dom/global-registrator": "^12.10.3",
     "@parcel/packager-ts": "2.10.3",
     "@parcel/transformer-typescript-types": "2.10.3",
     "@testing-library/react": "14.1.2",
-    "@types/jest": "29.5.11",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "bun-types": "1.0.18-1",
     "dprint": "0.44.0",
     "husky": "8.0.3",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
     "make-coverage-badge": "1.2.0",
     "parcel": "2.10.3",
     "publint": "0.2.6",
-    "ts-jest": "29.1.1",
     "type-testing": "0.2.0",
     "typescript": "5.3.3"
   },
