--- a/package.json
+++ b/package.json
@@ -38,13 +38,12 @@
   ],
   "devDependencies": {
     "@arethetypeswrong/cli": "0.13.3",
-    "@happy-dom/global-registrator": "^12.10.3",
+    "@happy-dom/global-registrator": "12.10.3",
     "@parcel/packager-ts": "2.10.3",
     "@parcel/transformer-typescript-types": "2.10.3",
     "@testing-library/react": "14.1.2",
-    "@types/node": "20.10.5",
+    "@types/bun": "1.0.0",
     "@types/react": "18.2.45",
-    "bun-types": "1.0.18-1",
     "dprint": "0.44.0",
     "husky": "8.0.3",
     "parcel": "2.10.3",
@@ -57,5 +56,6 @@
   },
   "dependencies": {
     "fast-deep-equal": "3.1.3"
-  }
+  },
+  "type": "module"
 }
