--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     "isolatedModules": true,
     "strict": true,
     "noUncheckedIndexedAccess": true,
-    "moduleResolution": "Node",
-    "module": "CommonJS",
+    "moduleResolution": "Bundler",
+    "module": "NodeNext",
     "outDir": "dist",
     "sourceMap": true,
     "declaration": true,
