chore: update Bun types

--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "@arethetypeswrong/cli": "0.13.3",
     "@parcel/packager-ts": "2.10.3",
     "@parcel/transformer-typescript-types": "2.10.3",
+    "@types/bun": "1.0.0",
     "@types/react": "18.2.45",
-    "bun-types": "1.0.18-1",
+    "@types/web": "0.0.131",
     "dprint": "0.44.0",
     "husky": "8.0.3",
     "parcel": "2.10.3",
