--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
-    "lib": ["es2022", "dom", "dom.iterable"],
-    "types": ["bun-types"]
+    "lib": ["es2022", "dom", "dom.iterable"]
   },
   "include": ["src"]
 }
