--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "@parcel/packager-ts": "2.10.3",
     "@parcel/transformer-typescript-types": "2.10.3",
     "@testing-library/react": "14.1.2",
-    "@types/bun": "1.0.0",
+    "@types/node": "20.10.5",
     "@types/react": "18.2.45",
+    "bun-types": "1.0.18-1",
     "dprint": "0.44.0",
     "husky": "8.0.3",
     "parcel": "2.10.3",
@@ -56,6 +57,5 @@
   },
   "dependencies": {
     "fast-deep-equal": "3.1.3"
-  },
-  "type": "module"
+  }
 }
