--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,14 +9,14 @@
     "isolatedModules": true,
     "strict": true,
     "noUncheckedIndexedAccess": true,
-    "moduleResolution": "Bundler",
-    "module": "ESNext",
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext",
     "outDir": "dist",
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
     "lib": ["es2022", "dom", "dom.iterable"],
-    "types": ["@types/bun"]
+    "types": ["bun-types"]
   },
   "include": ["src"]
 }
