--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   },
   "scripts": {
     "postinstall": "husky install",
-    "precommit": "bun test && dprint fmt && git add .",
+    "precommit": "bun test && bun lint && dprint fmt && git add .",
     "prebuild": "rm -rf dist && rm -rf .parcel-cache",
     "build": "parcel build",
     "build:watch": "parcel watch",
     "postbuild": "cp dist/index.d.ts dist/index.d.mts",
     "check:config": "attw --pack . && publint",
     "check:typescript": "tsc --noEmit",
-    "test": "bun test"
+    "test": "bun test",
+    "lint": "eslint -c .eslintrc.js --ext .ts,.tsx src"
   },
   "author": "@codemaskinc",
   "license": "MIT",
@@ -42,11 +43,26 @@
     "@parcel/packager-ts": "2.10.3",
     "@parcel/transformer-typescript-types": "2.10.3",
     "@testing-library/react": "14.1.2",
-    "@types/node": "20.10.5",
     "@types/bun": "1.0.0",
+    "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "@types/web": "0.0.131",
+    "@typescript-eslint/eslint-plugin": "6.17.0",
+    "@typescript-eslint/eslint-plugin-tslint": "6.17.0",
+    "@typescript-eslint/parser": "6.17.0",
     "dprint": "0.44.0",
+    "eslint": "8.56.0",
+    "eslint-config-codemask": "1.1.7",
+    "eslint-plugin-functional": "6.0.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsdoc": "48.0.2",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-nested-if": "1.0.0",
+    "eslint-plugin-no-else": "0.2.2",
+    "eslint-plugin-no-loops": "0.3.0",
+    "eslint-plugin-prefer-arrow": "1.2.3",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "husky": "8.0.3",
     "parcel": "2.10.3",
     "publint": "0.2.6",
