--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "postinstall": "husky install",
-    "precommit": "git add .",
+    "precommit": "bun test && bun lint && dprint fmt && git add .",
     "prebuild": "rm -rf dist && rm -rf .parcel-cache",
     "build": "parcel build",
     "build:watch": "parcel watch",
@@ -41,19 +41,19 @@
     "dist"
   ],
   "devDependencies": {
-    "@arethetypeswrong/cli": "0.13.3",
+    "@arethetypeswrong/cli": "0.13.5",
     "@happy-dom/global-registrator": "12.10.3",
     "@parcel/packager-ts": "2.10.3",
     "@parcel/transformer-typescript-types": "2.10.3",
     "@testing-library/react": "14.1.2",
     "@types/bun": "1.0.0",
-    "@types/node": "20.10.5",
-    "@types/react": "18.2.45",
-    "@types/web": "0.0.131",
+    "@types/node": "20.10.6",
+    "@types/react": "18.2.46",
+    "@types/web": "0.0.134",
     "@typescript-eslint/eslint-plugin": "6.17.0",
     "@typescript-eslint/eslint-plugin-tslint": "6.17.0",
     "@typescript-eslint/parser": "6.17.0",
-    "dprint": "0.44.0",
+    "dprint": "0.45.0",
     "eslint": "8.56.0",
     "eslint-config-codemask": "1.1.7",
     "eslint-plugin-functional": "6.0.0",
@@ -68,7 +68,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "8.0.3",
     "parcel": "2.10.3",
-    "publint": "0.2.6",
+    "publint": "0.2.7",
     "type-testing": "0.2.0",
     "typescript": "5.3.3"
   },
