--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@types/bun": "1.0.0",
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
-    "@types/use-sync-external-store": "^0.0.6",
+    "@types/use-sync-external-store": "0.0.6",
     "@types/web": "0.0.134",
     "@typescript-eslint/eslint-plugin": "6.17.0",
     "@typescript-eslint/eslint-plugin-tslint": "6.17.0",
@@ -78,6 +78,6 @@
   },
   "dependencies": {
     "fast-deep-equal": "3.1.3",
-    "use-sync-external-store": "^1.2.0"
+    "use-sync-external-store": "1.2.0"
   }
 }
