--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     }
   },
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "precommit": "bun test && bun lint && dprint fmt && git add .",
     "prebuild": "rm -rf dist && rm -rf .parcel-cache",
     "build": "parcel build",
@@ -73,7 +73,7 @@
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "husky": "8.0.3",
+    "husky": "9.0.11",
     "parcel": "2.10.3",
     "publint": "0.2.7",
     "type-testing": "0.2.0",
