--- a/package.json
+++ b/package.json
@@ -1,97 +1,118 @@
 {
-  "name": "@codemaskinc/store",
-  "version": "1.0.1",
-  "description": "- ⚛️ updates outside react components - 🪝 easy access to all store values - ✍️ no repeating yourself - ⚡️ no unnecessary rerenders - 🚀 typescript intellisense",
-  "source": "src/index.ts",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "keywords": [
-    "state",
-    "react",
-    "store",
-    "context",
-    "rerenders",
-    "typescript",
-    "intellisense"
-  ],
-  "homepage": "https://github.com/codemaskinc/store",
-  "repository": "https://github.com/codemaskinc/store",
-  "exports": {
-    ".": {
-      "module": "./dist/index.mjs",
-      "import": {
-        "types": "./dist/index.d.mts",
-        "default": "./dist/index.mjs"
-      },
-      "require": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
-      },
-      "default": "./dist/index.js"
+    "name": "@codemaskinc/store",
+    "version": "1.0.1",
+    "description": "- ⚛️ updates outside react components - 🪝 easy access to all store values - ✍️ no repeating yourself - ⚡️ no unnecessary rerenders - 🚀 typescript intellisense",
+    "keywords": [
+        "state",
+        "react",
+        "store",
+        "context",
+        "rerenders",
+        "typescript",
+        "intellisense"
+    ],
+    "homepage": "https://github.com/codemask-labs/store",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/codemask-labs/store.git"
+    },
+    "main": "./dist/index.js",
+    "exports": {
+        ".": {
+            "module": "./dist/index.js",
+            "import": {
+                "types": "./dist/index.d.ts",
+                "default": "./dist/index.js"
+            },
+            "require": {
+                "types": "./dist/index.d.ts",
+                "default": "./dist/index.js"
+            },
+            "default": "./dist/index.js"
+        },
+        "./mmkv": {
+            "module": "./dist/mmkv/index.js",
+            "import": {
+                "types": "./dist/mmkv/index.d.ts",
+                "default": "./dist/mmkv/index.js"
+            },
+            "require": {
+                "types": "./dist/mmkv/index.d.ts",
+                "default": "./dist/mmkv/index.js"
+            },
+            "default": "./dist/mmkv/index.js"
+        },
+        "./storage": {
+            "module": "./dist/storage/index.js",
+            "import": {
+                "types": "./dist/storage/index.d.ts",
+                "default": "./dist/storage/index.js"
+            },
+            "require": {
+                "types": "./dist/storage/index.d.ts",
+                "default": "./dist/storage/index.js"
+            },
+            "default": "./dist/storage/index.js"
+        }
+    },
+    "scripts": {
+        "prepare": "husky",
+        "precommit": "bun test && bun lint",
+        "build": "bun run build:js && bun run build:types",
+        "build:js": "bun run build.ts",
+        "build:types": "tsc -p tsconfig.build.json",
+        "check:config": "attw --pack . && publint",
+        "check:typescript": "tsc --noEmit",
+        "test": "bun test",
+        "lint": "eslint -c .eslintrc.js --ext .ts,.tsx src && dprint check",
+        "prepublishOnly": "bun install && bun run build"
+    },
+    "author": "@codemaskinc",
+    "publishConfig": {
+        "access": "public",
+        "provenance": true,
+        "ignore": [
+            "dist/*.map*"
+        ]
+    },
+    "license": "MIT",
+    "files": [
+        "dist"
+    ],
+    "devDependencies": {
+        "@arethetypeswrong/cli": "0.15.3",
+        "@happy-dom/global-registrator": "14.7.1",
+        "@testing-library/react": "15.0.2",
+        "@types/bun": "1.1.0",
+        "@types/node": "20.12.7",
+        "@types/react": "18.2.79",
+        "@types/web": "0.0.143",
+        "@typescript-eslint/eslint-plugin": "7.7.0",
+        "@typescript-eslint/eslint-plugin-tslint": "7.0.2",
+        "@typescript-eslint/parser": "7.7.0",
+        "dprint": "0.45.1",
+        "eslint": "8.57.0",
+        "eslint-config-codemask": "1.1.7",
+        "eslint-plugin-functional": "6.5.1",
+        "eslint-plugin-import": "2.29.1",
+        "eslint-plugin-jsdoc": "48.2.3",
+        "eslint-plugin-jsx-a11y": "6.8.0",
+        "eslint-plugin-nested-if": "1.0.0",
+        "eslint-plugin-no-else": "0.2.2",
+        "eslint-plugin-no-loops": "0.3.0",
+        "eslint-plugin-prefer-arrow": "1.2.3",
+        "eslint-plugin-react": "7.34.1",
+        "eslint-plugin-react-hooks": "4.6.0",
+        "husky": "9.0.11",
+        "publint": "0.2.7",
+        "type-testing": "0.2.0",
+        "typescript": "5.4.5"
+    },
+    "peerDependencies": {
+        "react": ">=18.2.0",
+        "react-native-mmkv": ">=2.0.0"
+    },
+    "dependencies": {
+        "fast-deep-equal": "3.1.3"
     }
-  },
-  "scripts": {
-    "prepare": "husky",
-    "precommit": "bun test && bun lint && dprint fmt && git add .",
-    "prebuild": "rm -rf dist && rm -rf .parcel-cache",
-    "build": "parcel build",
-    "build:watch": "parcel watch",
-    "postbuild": "cp dist/index.d.ts dist/index.d.mts",
-    "check:config": "attw --pack . && publint",
-    "check:typescript": "tsc --noEmit",
-    "test": "bun test",
-    "lint": "eslint -c .eslintrc.js --ext .ts,.tsx src",
-    "prepublishOnly": "bun install && bun run build"
-  },
-  "author": "@codemaskinc",
-  "publishConfig": {
-    "access": "public",
-    "provenance": true,
-    "ignore": [
-      "dist/*.map*"
-    ]
-  },
-  "license": "MIT",
-  "files": [
-    "dist"
-  ],
-  "devDependencies": {
-    "@arethetypeswrong/cli": "0.15.2",
-    "@happy-dom/global-registrator": "14.3.10",
-    "@parcel/packager-ts": "2.12.0",
-    "@parcel/transformer-typescript-types": "2.12.0",
-    "@testing-library/react": "14.2.2",
-    "@types/bun": "1.0.12",
-    "@types/node": "20.12.3",
-    "@types/react": "18.2.74",
-    "@types/web": "0.0.142",
-    "@typescript-eslint/eslint-plugin": "7.5.0",
-    "@typescript-eslint/eslint-plugin-tslint": "7.0.2",
-    "@typescript-eslint/parser": "7.5.0",
-    "dprint": "0.45.0",
-    "eslint": "8.57.0",
-    "eslint-config-codemask": "1.1.7",
-    "eslint-plugin-functional": "6.4.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsdoc": "48.2.2",
-    "eslint-plugin-jsx-a11y": "6.8.0",
-    "eslint-plugin-nested-if": "1.0.0",
-    "eslint-plugin-no-else": "0.2.2",
-    "eslint-plugin-no-loops": "0.3.0",
-    "eslint-plugin-prefer-arrow": "1.2.3",
-    "eslint-plugin-react": "7.34.1",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "husky": "9.0.11",
-    "parcel": "2.12.0",
-    "publint": "0.2.7",
-    "type-testing": "0.2.0",
-    "typescript": "5.4.3"
-  },
-  "peerDependencies": {
-    "react": ">=18.2.0"
-  },
-  "dependencies": {
-    "fast-deep-equal": "3.1.3"
-  }
 }
