--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,7 +1,8 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "baseUrl": "./src"
+        "baseUrl": "./src",
+        "emitDeclarationOnly": true
     },
     "exclude": [
         "node_modules",
