--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
         "build": "bun run build:js && bun run build:types",
         "build:js": "bun run build.ts",
         "build:types": "tsc -p tsconfig.build.json",
-        "check:config": "attw --pack --ignore-rules cjs-resolves-to-esm no-resolution unexpected-module-syntax . && publint",
+        "check:config": "attw --pack . --ignore-rules cjs-resolves-to-esm no-resolution unexpected-module-syntax && publint",
         "check:typescript": "tsc --noEmit",
         "test": "bun test",
         "lint": "eslint -c .eslintrc.js --ext .ts,.tsx src && dprint check",
