--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -10,19 +10,20 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "@codemaskinc/store": "1.1.0"
     },
     "devDependencies": {
-        "@types/react": "^18.2.43",
-        "@types/react-dom": "^18.2.17",
-        "@typescript-eslint/eslint-plugin": "^6.14.0",
-        "@typescript-eslint/parser": "^6.14.0",
-        "@vitejs/plugin-react": "^4.2.1",
-        "eslint": "^8.55.0",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.5",
-        "typescript": "^5.2.2",
-        "vite": "^5.0.8"
+        "@types/react": "18.2.79",
+        "@types/react-dom": "18.2.25",
+        "@typescript-eslint/eslint-plugin": "6.14.0",
+        "@typescript-eslint/parser": "6.14.0",
+        "@vitejs/plugin-react": "4.2.1",
+        "eslint": "8.55.0",
+        "eslint-plugin-react-hooks": "4.6.0",
+        "eslint-plugin-react-refresh": "0.4.6",
+        "typescript": "5.4.5",
+        "vite": "5.2.10"
     }
 }
