--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -12,7 +12,7 @@
     "dependencies": {
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "@codemaskinc/store": "1.1.0"
+        "stan-js": "0.1.0"
     },
     "devDependencies": {
         "@types/react": "18.2.79",
