--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@codemaskinc/store",
-    "version": "1.1.0",
-    "description": "- ⚛️ updates outside react components - 🪝 easy access to all store values - ✍️ no repeating yourself - ⚡️ no unnecessary rerenders - 🚀 typescript intellisense",
+    "name": "stan-js",
+    "version": "1.0.0",
+    "description": "Lightweight and flexible state management library designed for use in React applications and beyond",
     "keywords": [
         "state",
         "react",
@@ -11,10 +11,10 @@
         "typescript",
         "intellisense"
     ],
-    "homepage": "https://github.com/codemask-labs/store",
+    "homepage": "https://github.com/codemask-labs/stan-js",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/codemask-labs/store.git"
+        "url": "git+https://github.com/codemask-labs/stan-js.git"
     },
     "main": "./dist/index.js",
     "exports": {
@@ -64,10 +64,10 @@
         "check:config": "attw --pack . --ignore-rules cjs-resolves-to-esm no-resolution unexpected-module-syntax && publint",
         "check:typescript": "tsc --noEmit",
         "test": "bun test",
-        "lint": "eslint -c .eslintrc.js --ext .ts,.tsx src && dprint check",
+        "lint": "eslint -c .eslintrc.json --ext .ts,.tsx src && dprint check",
         "prepublishOnly": "bun install && bun run build"
     },
-    "author": "@codemaskinc",
+    "author": "codemask-labs",
     "publishConfig": {
         "access": "public",
         "provenance": true,
@@ -87,9 +87,9 @@
         "@types/node": "20.12.7",
         "@types/react": "18.2.79",
         "@types/web": "0.0.143",
-        "@typescript-eslint/eslint-plugin": "7.7.0",
+        "@typescript-eslint/eslint-plugin": "7.7.1",
         "@typescript-eslint/eslint-plugin-tslint": "7.0.2",
-        "@typescript-eslint/parser": "7.7.0",
+        "@typescript-eslint/parser": "7.7.1",
         "dprint": "0.45.1",
         "eslint": "8.57.0",
         "eslint-config-codemask": "1.1.7",
