--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "stan-js",
-    "version": "1.0.0",
+    "version": "0.1.1",
+    "type": "module",
     "description": "Lightweight and flexible state management library designed for use in React applications and beyond",
     "keywords": [
         "state",
@@ -70,7 +71,7 @@
     "author": "codemask-labs",
     "publishConfig": {
         "access": "public",
-        "provenance": true,
+        "provenance": false,
         "ignore": [
             "dist/*.map*"
         ]
