--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
         "isolatedModules": true,
         "strict": true,
         "noUncheckedIndexedAccess": true,
-        "moduleResolution": "NodeNext",
-        "module": "NodeNext",
+        "moduleResolution": "Bundler",
+        "module": "ES2015",
         "outDir": "dist",
         "sourceMap": false,
         "declaration": true,
