fix: allow common js

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
         "prepare": "husky",
         "precommit": "bun test && bun lint",
         "build": "unbuild --minify",
-        "check:config": "attw --pack . --ignore-rules no-resolution && publint",
+        "check:config": "attw --pack . && publint",
         "check:typescript": "tsc --noEmit",
         "test": "bun test",
         "lint": "eslint -c .eslintrc.json --ext .ts,.tsx src && dprint check",
@@ -88,32 +88,35 @@
     },
     "license": "MIT",
     "files": [
-        "dist"
+        "dist",
+        "mmkv",
+        "storage",
+        "vanilla"
     ],
     "devDependencies": {
         "@arethetypeswrong/cli": "0.15.3",
-        "@happy-dom/global-registrator": "14.7.1",
-        "@testing-library/react": "15.0.4",
-        "@types/bun": "1.1.0",
-        "@types/node": "20.12.7",
-        "@types/react": "18.2.79",
-        "@types/web": "0.0.143",
-        "@typescript-eslint/eslint-plugin": "7.7.1",
+        "@happy-dom/global-registrator": "14.10.2",
+        "@testing-library/react": "15.0.7",
+        "@types/bun": "1.1.2",
+        "@types/node": "20.12.12",
+        "@types/react": "18.3.2",
+        "@types/web": "0.0.144",
+        "@typescript-eslint/eslint-plugin": "7.9.0",
         "@typescript-eslint/eslint-plugin-tslint": "7.0.2",
-        "@typescript-eslint/parser": "7.7.1",
+        "@typescript-eslint/parser": "7.9.0",
         "dprint": "0.45.1",
         "eslint": "8.57.0",
         "eslint-config-codemask": "1.1.7",
         "eslint-plugin-functional": "6.5.1",
         "eslint-plugin-import": "2.29.1",
-        "eslint-plugin-jsdoc": "48.2.3",
+        "eslint-plugin-jsdoc": "48.2.4",
         "eslint-plugin-jsx-a11y": "6.8.0",
         "eslint-plugin-nested-if": "1.0.0",
         "eslint-plugin-no-else": "0.2.2",
         "eslint-plugin-no-loops": "0.3.0",
         "eslint-plugin-prefer-arrow": "1.2.3",
         "eslint-plugin-react": "7.34.1",
-        "eslint-plugin-react-hooks": "4.6.0",
+        "eslint-plugin-react-hooks": "4.6.2",
         "husky": "9.0.11",
         "publint": "0.2.7",
         "type-testing": "0.2.0",
