--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "./storage": {
             "module": "./dist/storage/index.mjs",
             "react-native": "./dist/storage/mmkv.cjs",
+            "browser": "./dist/storage/index.cjs",
             "import": {
                 "types": "./dist/storage/index.d.mts",
                 "default": "./dist/storage/index.mjs"
