--- a/examples/astro/package.json
+++ b/examples/astro/package.json
@@ -17,7 +17,7 @@
         "astro": "4.7.0",
         "react": "18.3.0",
         "react-dom": "18.3.0",
-        "stan-js": "0.3.0",
+        "stan-js": "latest",
         "typescript": "5.4.5"
     }
 }
