chore: update eslint

--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
         "check:config": "attw --pack . && publint",
         "check:typescript": "tsc --noEmit",
         "test": "bun test",
-        "lint": "eslint -c .eslintrc.json --ext .ts,.tsx src && dprint check",
+        "lint": "eslint src && dprint check",
+        "lint:fix": "eslint src --fix && dprint fmt",
         "prepublishOnly": "bun install && bun run build"
     },
     "author": "codemask-labs",
@@ -85,30 +86,17 @@
     ],
     "devDependencies": {
         "@arethetypeswrong/cli": "0.15.3",
-        "@happy-dom/global-registrator": "14.10.2",
+        "@happy-dom/global-registrator": "14.11.0",
         "@testing-library/react": "15.0.7",
-        "@types/bun": "1.1.2",
+        "@types/bun": "1.1.3",
         "@types/node": "20.12.12",
-        "@types/react": "18.3.2",
-        "@types/web": "0.0.144",
-        "@typescript-eslint/eslint-plugin": "7.9.0",
-        "@typescript-eslint/eslint-plugin-tslint": "7.0.2",
-        "@typescript-eslint/parser": "7.9.0",
-        "dprint": "0.45.1",
-        "eslint": "8.57.0",
-        "eslint-config-codemask": "1.1.7",
-        "eslint-plugin-functional": "6.5.1",
-        "eslint-plugin-import": "2.29.1",
-        "eslint-plugin-jsdoc": "48.2.4",
-        "eslint-plugin-jsx-a11y": "6.8.0",
-        "eslint-plugin-nested-if": "1.0.0",
-        "eslint-plugin-no-else": "0.2.2",
-        "eslint-plugin-no-loops": "0.3.0",
-        "eslint-plugin-prefer-arrow": "1.2.3",
-        "eslint-plugin-react": "7.34.1",
-        "eslint-plugin-react-hooks": "4.6.2",
+        "@types/react": "18.3.3",
+        "@types/web": "0.0.147",
+        "dprint": "0.46.1",
+        "eslint": "9.3.0",
+        "eslint-config-codemask": "2.0.0-beta.9",
         "husky": "9.0.11",
-        "publint": "0.2.7",
+        "publint": "0.2.8",
         "type-testing": "0.2.0",
         "typescript": "5.4.5",
         "unbuild": "2.0.0"
