--- a/package.json
+++ b/package.json
@@ -90,7 +90,6 @@
         "@testing-library/react": "15.0.7",
         "@types/bun": "1.1.3",
         "@types/node": "20.12.12",
-        "@types/react": "18.3.3",
         "@types/web": "0.0.147",
         "dprint": "0.46.1",
         "eslint": "9.3.0",
@@ -99,7 +98,8 @@
         "publint": "0.2.8",
         "type-testing": "0.2.0",
         "typescript": "5.4.5",
-        "unbuild": "2.0.0"
+        "unbuild": "2.0.0",
+        "react-native-mmkv": "2.12.2"
     },
     "peerDependencies": {
         "react": ">=18.2.0",
