--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -6,13 +6,12 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint",
-        "postinstall": "npm i -g npm@latest"
+        "lint": "next lint"
     },
     "dependencies": {
         "react": "18.3.1",
         "react-dom": "18.3.1",
-        "next": "14.2.4",
+        "next": "14.1.0",
         "stan-js": "latest"
     },
     "devDependencies": {
