--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -18,8 +18,6 @@
         "typescript": "5.5.2",
         "@types/node": "20.14.9",
         "@types/react": "18.3.3",
-        "@types/react-dom": "18.3.0",
-        "postcss": "8.4.38",
-        "tailwindcss": "3.4.4"
+        "@types/react-dom": "18.3.0"
     }
 }
