--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -1,32 +1,41 @@
 {
-    "name": "simple-react",
+    "name": "react",
     "private": true,
     "version": "0.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
         "preview": "vite preview"
     },
-    "stackblitz": {
-        "startCommand": "yarn install --no-lockfile && yarn dev"
-    },
     "dependencies": {
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "stan-js": "latest"
+        "@radix-ui/react-slot": "1.1.0",
+        "class-variance-authority": "0.7.1",
+        "clsx": "2.1.1",
+        "lucide-react": "0.465.0",
+        "react": "18.3.1",
+        "react-dom": "18.3.1",
+        "tailwind-merge": "2.5.5",
+        "tailwindcss-animate": "1.0.7",
+        "stan-js": "latest",
+        "react-scan": "0.0.35"
     },
     "devDependencies": {
-        "@types/react": "18.2.79",
-        "@types/react-dom": "18.2.25",
-        "@typescript-eslint/eslint-plugin": "6.14.0",
-        "@typescript-eslint/parser": "6.14.0",
-        "@vitejs/plugin-react": "4.2.1",
-        "eslint": "8.55.0",
-        "eslint-plugin-react-hooks": "4.6.0",
-        "eslint-plugin-react-refresh": "0.4.6",
-        "typescript": "5.4.5",
-        "vite": "5.2.10"
+        "@eslint/js": "9.15.0",
+        "@types/node": "22.10.1",
+        "@types/react": "18.3.12",
+        "@types/react-dom": "18.3.1",
+        "@vitejs/plugin-react": "4.3.4",
+        "autoprefixer": "10.4.20",
+        "eslint": "9.15.0",
+        "eslint-plugin-react-hooks": "5.0.0",
+        "eslint-plugin-react-refresh": "0.4.14",
+        "globals": "15.12.0",
+        "postcss": "8.4.49",
+        "tailwindcss": "3.4.16",
+        "typescript": "~5.6.2",
+        "typescript-eslint": "8.15.0",
+        "vite": "6.0.1"
     }
 }
