chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -85,21 +85,21 @@
         "vanilla"
     ],
     "devDependencies": {
-        "@arethetypeswrong/cli": "0.15.3",
-        "@happy-dom/global-registrator": "14.12.3",
-        "@testing-library/react": "16.0.0",
-        "@types/bun": "1.1.6",
-        "@types/node": "20.14.9",
-        "@types/web": "0.0.151",
-        "dprint": "0.47.0",
-        "eslint": "9.6.0",
-        "eslint-config-codemask": "2.0.0-beta.13",
-        "husky": "9.0.11",
-        "publint": "0.2.8",
+        "@arethetypeswrong/cli": "0.17.4",
+        "@happy-dom/global-registrator": "17.4.4",
+        "@testing-library/react": "16.3.0",
+        "@types/bun": "1.2.8",
+        "@types/node": "22.14.0",
+        "@types/web": "0.0.216",
+        "dprint": "0.49.1",
+        "eslint": "9.24.0",
+        "eslint-config-codemask": "2.1.2",
+        "husky": "9.1.7",
+        "publint": "0.3.10",
         "type-testing": "0.2.0",
-        "typescript": "5.5.3",
-        "unbuild": "2.0.0",
-        "react-native-mmkv": "2.12.2"
+        "typescript": "5.8.3",
+        "unbuild": "3.5.0",
+        "react-native-mmkv": "3.2.0"
     },
     "peerDependencies": {
         "react": ">=18.2.0",
