--- a/examples/react/components.json
+++ b/examples/react/components.json
@@ -4,7 +4,7 @@
     "rsc": false,
     "tsx": true,
     "tailwind": {
-        "config": "tailwind.config.cjs",
+        "config": "tailwind.config.ts",
         "css": "src/index.css",
         "baseColor": "neutral",
         "cssVariables": true,
