--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -11,31 +11,32 @@
     },
     "dependencies": {
         "@radix-ui/react-slot": "1.1.0",
-        "class-variance-authority": "0.7.1",
-        "clsx": "2.1.1",
-        "lucide-react": "0.465.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.507.0",
         "react": "18.3.1",
         "react-dom": "18.3.1",
-        "tailwind-merge": "2.5.5",
-        "tailwindcss-animate": "1.0.7",
+        "react-scan": "0.3.3",
         "stan-js": "latest",
-        "react-scan": "0.0.35"
+        "tailwind-merge": "^3.2.0",
+        "tailwindcss-animate": "1.0.7"
     },
     "devDependencies": {
-        "@eslint/js": "9.15.0",
+        "@eslint/js": "9.26.0",
+        "@tailwindcss/vite": "4.1.5",
         "@types/node": "22.10.1",
         "@types/react": "18.3.12",
         "@types/react-dom": "18.3.1",
         "@vitejs/plugin-react": "4.3.4",
-        "autoprefixer": "10.4.20",
-        "eslint": "9.15.0",
-        "eslint-plugin-react-hooks": "5.0.0",
-        "eslint-plugin-react-refresh": "0.4.14",
+        "eslint": "9.26.0",
+        "eslint-plugin-react-hooks": "5.2.0",
+        "eslint-plugin-react-refresh": "0.4.20",
         "globals": "15.12.0",
-        "postcss": "8.4.49",
-        "tailwindcss": "3.4.16",
-        "typescript": "~5.6.2",
-        "typescript-eslint": "8.15.0",
+        "jiti": "2.4.2",
+        "tailwindcss": "4.1.5",
+        "tw-animate-css": "^1.2.9",
+        "typescript": "5.8.3",
+        "typescript-eslint": "8.31.1",
         "vite": "6.0.1"
     }
 }
